--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,43 @@
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
-  /* background-color: black !important; */
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
+}
+/* Search Bar  */
+.search {
+  /* width: 100%; */
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.wrap {
+  margin: 0 auto;
+}
+.searchTerm {
+  width: 340px;
+  border: 3px solid #00b4cc;
+  border-right: none;
+  padding: 15px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00b4cc;
+  background: #00b4cc;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 /*===================== Basic E-commerce Card Design ============= */
